# sensor-fusion-projects-udacity-nanodegree

./: .README.md.swp  .gitignore  README.md
camera/: Final Project Spreadsheet - Camera FP.6.xlsx  Midterm Project - Camera Based 2D Feature Tracking.xlsx
camera/SFND_2D_Feature_Tracking/src/: MidTermProject_Camera_Student.cpp  matching2D.hpp  matching2D_Student.cpp
camera/SFND_2D_Feature_Tracking/src/describe_keypoints_brisk_sift/: CMakeLists.txt
camera/SFND_2D_Feature_Tracking/src/detect_keypoints_fast_shi_tomasi/: CMakeLists.txt
camera/SFND_3D_Object_Tracking/src/: FinalProject_Camera.cpp  camFusion_Student.cpp  matching2D_Student.cpp
kalman_filter/SFND_Unscented_Kalman_Filter/src/: highway.h  ukf.cpp  ukf.h
kalman_filter/SFND_Unscented_Kalman_Filter/src/code_snippets_lessons/: CMakeLists.txt
kalman_filter/SFND_Unscented_Kalman_Filter/src/code_snippets_lessons/convert_aug_sigma_pt_to_predicted_pt/: CMakeLists.txt
kalman_filter/SFND_Unscented_Kalman_Filter/src/code_snippets_lessons/root_mean_square_error/: CMakeLists.txt
lidar/: .cproject  .project
lidar/SFND_Lidar_Obstacle_Detection/src/: .environment.cpp.swp  environment.cpp  kdtree3D.h  processPointClouds.cpp  processPointClouds.h
radar/: README.md  ca_cfar_1d.m  ca_cfar_1d.m~  doppler_velocity_calculation.m  fft_2d_exercise.m  fft_exercise.m  radar_target_generation_and_detection.m  radar_target_generation_and_detection.m~  range_calculation_radar.m~  range_estimation_radar.m  range_max_calculation_radar.m  sensor_fusion_with_radar.m  sensor_fusion_with_radar.m~
(+50 files in other folders)
